support for remote or local execution

--- a/roles/sat6-activation-keys/tasks/main.yml
+++ b/roles/sat6-activation-keys/tasks/main.yml
@@ -11,4 +11,6 @@
     content_view: "{{ item.content_view }}"
     release_version: "{{ item.release_version }}"
     subscriptions: "{{ item.subscriptions }}"
+    validate_certs: "{{ validate_certs }}"
   loop: "{{ activation_keys }}"
+  delegate_to: "{{ localhost if fam_local else omit }}"
