--- a/roles/sat6-compute-resources/tasks/main.yml
+++ b/roles/sat6-compute-resources/tasks/main.yml
@@ -10,3 +10,4 @@
     --user '{{ item.username }}' 
     --password '{{ item.password }}'
   with_items: "{{ compute_resources }}"
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
