--- a/roles/sat6-default-organization/tasks/main.yml
+++ b/roles/sat6-default-organization/tasks/main.yml
@@ -4,7 +4,9 @@
   shell: "hammer --csv organization list | grep '{{ organization }}' | awk -F ',' '{print $1}'"
   register: organization_id
   changed_when: false
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
 
 - name: add hammer organization default
   command: "hammer defaults add --param-name organization_id --param-value {{ organization_id.stdout }}"
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
 
