--- a/roles/sat6-openscap/tasks/tailoring.yml
+++ b/roles/sat6-openscap/tasks/tailoring.yml
@@ -14,6 +14,7 @@
     --location-ids 2,6,8,3,7,5
   register: tailoring_upload
   failed_when: false
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
 
 - fail:
     msg: "Something went wrong uploading the Tailoring file. StdErr: {{ tailoring_upload.stderr }}"
@@ -22,11 +23,13 @@
 - name: Update tailoring file
   command: "hammer tailoring-file update --name '{{ policy.sat6_tailoring_file_name}}' --scap-file '/tmp/{{ policy.tailoring_file_name }}'"
   when: "'Name has already been taken' in tailoring_upload.stderr"
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
   
 
 - name: Get the tailoring file id
   shell: "hammer tailoring-file list  | grep {{ policy.sat6_tailoring_file_name }} | cut -d' ' -f 1"
   register: tailoring_file_id
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
 
 - set_fact:
     tailoring_file_id: "{{ tailoring_file_id.stdout }}"
@@ -34,10 +37,12 @@
 - name: Get tailoring Profile ID
   shell: "hammer --output yaml tailoring-file info --id {{ tailoring_file_id }} | grep '    Id:' | awk '{ print $2 }'"
   register: tailoring_file_profile_id
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
 
 - set_fact:
     tailoring_file_profile_id: "{{ tailoring_file_profile_id.stdout }}"
 
 - name: "update Profile {{ policy.name }} with tailoring file"
   command: "hammer policy update --name '{{ policy.name }}' --tailoring-file '{{ policy.sat6_tailoring_file_name }}' --tailoring-file-profile-id '{{ tailoring_file_profile_id }}'" 
+  delegate_to: "{{ 'localhost' if hammer_local else omit }}"
 
