--- a/roles/sat6-repositories-sync/defaults/main.yml
+++ b/roles/sat6-repositories-sync/defaults/main.yml
@@ -1,2 +1,5 @@
 ---
-# defaults file for sat6-sync
+# defaults file for sat6-activation-keys
+validate_certs: True
+hammer_local: False
+fam_local: True
