item missing in users role

--- a/roles/sat6-users/tasks/main.yml
+++ b/roles/sat6-users/tasks/main.yml
@@ -7,12 +7,13 @@
     server_url: "{{ server_url }}"
     validate_certs: "{{ validate_certs }}"
     login: "{{ item.login }}"
-    user_password: "{{ item.password }}"
+    user_password: "{{ item.user_password }}"
     admin: "{{ item.admin | default(omit) }}"
     firstname: "{{ item.firstname | default(omit) }}"
     lastname: "{{ item.lastname | default(omit) }}"
     mail: "{{ item.mail | default(omit) }}"
-    auth_source: "{{ auth_source }}"
+    auth_source: "{{ item.auth_source }}"
     roles: "{{ item.roles }}"
   loop: "{{ users }}"
   delegate_to: "{{ 'localhost' if fam_local else omit }}"
+
