updated to Satellite 6.6 GA

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -27,7 +27,7 @@
 #module_lang    = C
 #module_set_locale = False
 
-inventory = hosts
+inventory = inventory 
 library = foreman-ansible-modules/plugins/modules
 module_utils = foreman-ansible-modules/plugins/module_utils
 doc_fragment_plugins = foreman-ansible-modules/plugins/doc_fragments
