--- a/sat6-install.yml
+++ b/sat6-install.yml
@@ -10,10 +10,10 @@
     command: >
       subscription-manager repos
       --disable '*'
-      --enable=rhel-7-server-rpms
-      --enable=rhel-server-rhscl-7-rpms
-      --enable=rhel-server-7-satellite-6-beta-rpms
-      --enable=rhel-7-server-satellite-maintenance-6-beta-rpms
+      --enable=rhel-7-server-rpms \
+      --enable=rhel-7-server-satellite-6.6-rpms \
+      --enable=rhel-7-server-satellite-maintenance-6-rpms \
+      --enable=rhel-server-rhscl-7-rpms \
       --enable=rhel-7-server-ansible-2.8-rpms
     tags: rhsm
 
